testsuite/tests/typecheck/should_fail/T13320.stderr

T13320.hs:32:21: error:
    • Couldn't match type ‘X_Var ξ’ with ‘TermX ξ’
        arising from a use of ‘genTerm’
    • In the first argument of ‘sized’, namely ‘genTerm’
      In the expression: sized genTerm
      In an equation for ‘arbitrary’: arbitrary = sized genTerm
    • Relevant bindings include
        arbitrary :: Gen (TermX ξ) (bound at T13320.hs:32:3)
